--- a/src/help.qrc
+++ b/src/help.qrc
@@ -19,5 +19,6 @@
         <file>icons/shuffle.png</file>
         <file>icons/sort.png</file>
         <file>icons/undo.png</file>
+        <file>icons/home.png</file>
     </qresource>
 </RCC>
