--- a/src/help.qrc
+++ b/src/help.qrc
@@ -23,5 +23,6 @@
         <file>icons/print.png</file>
         <file>icons/side.png</file>
         <file>icons/text.png</file>
+        <file>icons/down.png</file>
     </qresource>
 </RCC>
