--- a/src/help.qrc
+++ b/src/help.qrc
@@ -24,5 +24,6 @@
         <file>icons/text.png</file>
         <file>icons/side.png</file>
         <file>icons/back.png</file>
+        <file>icons/overlap.png</file>
     </qresource>
 </RCC>
